--- a/templates/post_page.html
+++ b/templates/post_page.html
@@ -83,6 +83,7 @@
 			{% endfor %}
 			</div>
 		{% endif %}
+		{% include 'djangospam/cookieform.html' %}
 		<form id="id_comment_form" method="POST" action="{% url 'new_comment' post.id %}?next={{request.path}}">
 			{% csrf_token %}
 			{% render_honeypot_field %}
