Change Home tab to Learn, changed Outsider to Other

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,11 +20,11 @@
 		<div class="container">
 			<a class="brand" href="{% url 'home' %}">YouTalkEdu</a>
 			<ul class="nav">
-				<li><a id="id_home_link" href="{% url 'home' %}">Home</a></li>
-				<li><a id="id_problems_link" href="{% url 'post_page_base' page='problems' %}">Problems</a></li>
-				<li><a id="id_ideas_link" href="{% url 'post_page_base' page='ideas' %}">Ideas</a></li>
-				<li><a id="id_questions_link" href="{% url 'post_page_base' page='questions' %}">Questions</a></li>
-				<li><a id="id_site_feedback_link" href="{% url 'post_page_base' page='site_feedback' %}">Site Feedback</a></li>
+				<li><a href="{% url 'learn_more' %}">Learn</a></li>
+				<li><a href="{% url 'post_page_base' page='problems' %}">Problems</a></li>
+				<li><a href="{% url 'post_page_base' page='ideas' %}">Ideas</a></li>
+				<li><a href="{% url 'post_page_base' page='questions' %}">Questions</a></li>
+				<li><a href="{% url 'post_page_base' page='site_feedback' %}">Site Feedback</a></li>
 				<li><a href="{% url 'search' %}">Search</a></li>
 			</ul>
             	        <ul class="nav pull-right">
