--- a/templates/registration/registration_complete.html
+++ b/templates/registration/registration_complete.html
@@ -3,6 +3,10 @@
 {% block title %}Registration Complete - YouTalkEdu{% endblock title %}
 
 {% block content %}
-	<p>Thank you for registering. An verification email has been sent to the provided email address.</p>
+	<div class="alert alert-success">
+		<p>Thank you for registering.</p>
+		<p>Check your inbox for a verification email from <span class="obfuscate">"moc.liamg@udeklatuoy"</span>.
+		</p>
+	</div>
 {% endblock content %}
 
