--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -30,7 +30,7 @@
 			<div class="fieldWrapper">
 			{{ field.label_tag }} {{ field }}
 			{% if 'mail' in field.label_tag %}
-				This will ONLY be used to send a verification E-mail. After that, we'll sell it to the highest bidder (only joking).
+				This will ONLY be used to send a verification E-mail.
 			{% endif %}
 			<br/><br/>
 			</div>
