--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -5,5 +5,7 @@
 {% block title %}Password reset complete - YouTalkEdu{% endblock title %}
 
 {% block content %}
-	<p>Your password has been set.  You may go ahead and log in now.</p>
+	<div class="alert alert-success">
+		<p>Your password has been set. You may go ahead and log in now.</p>
+	</div>
 {% endblock content %}
