--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -5,30 +5,37 @@
 {% block title %}New password - YouTalkEdu{% endblock title %}
 
 {% block content %}
+	<div class="move_right">
 	{% if validlink %}
-		<p>Please enter your new password twice.</p>
 		<form action="" method="post">
 		{% csrf_token %}
+		{% if form.errors %}
+			<div class="alert alert-error">
+				<button type="button" class="close" data-dismiss="alert">×</button>
+				{% for field in form %} 
+					{% if field.errors %}
+						<li>{{ field.errors|striptags }}</li>
+					{% endif %}
+				{% endfor %}
+			</div>
+		{% endif %}
 		<table>
 			<tr>
-				<td>{{ form.new_password1.errors }}
-				<label for="id_new_password1">New password:</label></td>
+				<td><label for="id_new_password1">New password:</label></td>
 				<td>{{ form.new_password1 }}</td>
 			</tr>
 			<tr>
-				<td>{{ form.new_password2.errors }}
-				<label for="id_new_password2">Confirm password:</label></td>
+				<td><label for="id_new_password2">Confirm password:</label></td>
 				<td>{{ form.new_password2 }}</td>
-			</tr>
-			<tr>
-				<td></td>
-				<td><input type="submit" value="Change my password" /></td>
-			</tr>
-		</table>
+		</table><br/>
+		<button class="btn btn-primary" type="submit">Change my password</button>
 		</form>
 	{% else %}
-		<h4>Password reset unsuccessful</h4>
+		<div class="alert alert-error">		
+			<h4>Password reset unsuccessful</h4>
+		</div>
 		<p>The password reset link was invalid, possibly because it has already been used.
-		Please request a new password reset.</p>
+		Please request a new password reset. Sorry!</p>
 	{% endif %}
+	</div>
 {% endblock content %}
