--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -5,6 +5,9 @@
 {% block title %}Password reset success - YouTalkEdu{% endblock title %}
 
 {% block content %}
-	<p>We've e-mailed you instructions for resetting your password.</p>
-	<p>You should be receiving it shortly.</p>
+	<div class="alert alert-success">
+		<p>Check your inbox for an email from <span class="obfuscate">"moc.liamg@udeklatuoy"</span>
+		with instructions for reseting your password</p>
+		<p>You should be receiving it shortly.</p>
+	</div>
 {% endblock content %}
