Added email link, added ADMIN to settings for email

--- a/talkEdu/templates/FAQ.html
+++ b/talkEdu/templates/FAQ.html
@@ -30,7 +30,8 @@
 			should be 0.5, even though your page will display two posts with 100% rating each.
 		</p>
 		<p>
-			If you believe your user rating has been inaccurately calculated, please email me. {# EMAIL #}
+			If you believe your user rating has been inaccurately calculated, please 
+			<a href="Mailto:youtalkedu@gmail.com">email me.</a>
 		</p><br/>
 
 		<h4><a id="2">My post has disappeared</a></h4>
@@ -55,9 +56,12 @@
 			<li>The incorrect username is being entered.</li>
 				<p>
 					Fix: If you have made any posts/comments on the site, try searching for them and
-					finding the username attached to them. If worst comes to worst, you may try 
-					emailing me {# EMAIL #}, but the odds are slim that I will be able to help
+					finding the username attached to them.
+{% comment %} If worst comes to worst, you may try 
+					<a href="Mailto:youtalkedu@gmail.com">emailing me</a>,
+					but the odds are slim that I will be able to help
 					(send me every piece of info you can -- email, posts voted on, last login, etc).
+{% endcomment %}
 				</p>
 			<li>The account has been banned.</li>
 				<p>
@@ -66,7 +70,7 @@
 					If you haven't posted any ban-worthy material on the site,
 					this is likely the result of someone stealing your password and posting as you. 
 					Depending on my mood, I may return your account to you. 
-					Press your luck by emailing me here {# EMAIL #}.
+					Press your luck by <a href="Mailto:youtalkedu@gmail.com">emailing me</a>.
 				</p>
 		</ol><br/>
 
@@ -81,12 +85,14 @@
 		<h4><a id="5">I'm locked out of my account</a></h4>
 		<p>
 			Sorry! For security reasons, the number of logins you can attempt before being locked out of 
-			your account is limited. Please email me {# EMAIL #} and I will unlock your account.		
+			your account is limited. 
+			Please <a href="Mailto:youtalkedu@gmail.com">email me</a> and I will unlock your account.
 		</p><br/>
 
 		<h4><a id="6">My question is not listed</a></h4>
 		<p>
-			Email me your question here {# EMAIL #}. I will do my best to address it as quickly as I can.
+			<a href="Mailto:youtalkedu@gmail.com">Email me</a> your question. 
+			I will do my best to address it as quickly as I can.
 		</p>
 
 	</ul>
