--- a/talkEdu/templates/learn_more.html
+++ b/talkEdu/templates/learn_more.html
@@ -89,7 +89,8 @@
 				If you have any ideas about how to better the discussion, or just simply want to voice
 				your thoughts on what you like/dislike/want to see, please post here.<br/>
 				<span style="color:red">If you have found any security issues with the site, 
-				PLEASE do not post them here. Email {# EMAIL #} those to me.</span></p>
+				PLEASE do not post them here. <a href="Mailto:youtalkedu@gmail.com">Email</a> those to me
+				and I will be forever grateful.</span></p>
 
 			</div>
 
