--- a/talkEdu/templates/registration/activate.html
+++ b/talkEdu/templates/registration/activate.html
@@ -4,7 +4,10 @@
 {% block title %}Activation Failed - YouTalkEdu{% endblock title %}
 
 {% block content %}
-	<p> :( It appears your account activation has failed. 
-	The activation key used in this attempt was {{ activation_key }}.
-	If this matches the activation key previously emailed to you, please try again.</p>
+	<div class="alert alert-error">
+		<p> :( It appears your account activation has failed. 
+		The activation key used in this attempt was {{ activation_key }}.
+		If this matches the activation key previously emailed to you, please try again.
+		</p>
+	</div>
 {% endblock content %}
