Added Teddy's logo to learn more page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -13,7 +13,7 @@
 
 /* Templates used on: learn_more */
 .tab-content h3, .tab-content h2 {
-	color:#00BAED;
+	color:#000099;
 }
 
 /* Templates used on: base_post, post_page */
