--- a/templates/learn_more.html
+++ b/templates/learn_more.html
@@ -18,8 +18,8 @@
 		<div class="tab-content">
 			{# Default display upon arrival #}
 			<div class="tab-pane fade in active" id="tab0">
-				<h2>YouTalkEdu - Where YOU discuss & debate all things education!</h2><br/>
-				<h4>Welcome to YouTalkEdu!</h4>
+				<h2>Welcome to	<img src="{% static 'img/logo.png' %}" height="100px" width="200px" style="display:inline-block" /></h2>
+				<h3 style="display:inline-blocK">Where YOU discuss & debate all things education!</h3><br/>
 				<p>If I'm already boring you, just go wander around the site. I won't be upset. Really.</p><br/>
 				<h4>What is YouTalkEdu?</h4>
 				<p>YouTalkEdu is a free-to-use website geared towards bettering the current 
@@ -35,6 +35,7 @@
 					<li>No foul language.</li>
 				</ul><br/>
 				<h3>Click on the tabs to the left to learn more about YouTalkEdu!</h3><br/>
+				<h6>Credit to <a href="https://twitter.com/theodoremedina">Theodore Medina</a> for the site logo</h6>
 			</div>
 
 			{# Tab 1 - User types #}
@@ -73,7 +74,7 @@
 
 			{# Tab 2 - PIQS pages #}
 			<div class="tab-pane fade in" id="tab2">
-				<h3>PIQS - The unclever abbreviation for the YouTalkEdu discussion pages.</h3><br/>
+				<h3>PIQS - A very unclever abbreviation.</h3><br/>
 
 				<h4>{{ page_type_dict.0.1 }} - Discuss any problems you see in the current educational system here</h4>
 				<p>No specifics!! Phrases such as "Mr. Doe should be fired" or 
@@ -109,7 +110,7 @@
 
 			{# Tab 4 - Voting #}
 			<div class="tab-pane fade in" id="tab4">
-				<h3>Voting like you've never seen it before.</h3><br/>
+				<h3>A voting system with a purpose.</h3><br/>
 				<h4>If you recall from the user types tab, we have the following user types:</h4>
 				<h5>
 				{% for type in user_type_dict %}
