--- a/templates/learn_more.html
+++ b/templates/learn_more.html
@@ -35,7 +35,7 @@
 					<li>No foul language.</li>
 				</ul><br/>
 				<h3>Click on the tabs to the left to learn more about YouTalkEdu!</h3><br/>
-				<h6>Credit to <a href="https://twitter.com/theodoremedina">Theodore Medina</a> for the site logo</h6>
+				<h6>Credit to <a href="//twitter.com/theodoremedina">Theodore Medina</a> for the site logo</h6>
 			</div>
 
 			{# Tab 1 - User types #}
@@ -63,7 +63,7 @@
 					Pat yourself on the back for asking two great questions in a row. 
 					Color can be used to stimulate learning and is beneficial in bringing out creativity
 					(you can read more about this in the rather uncolorful eHow article located
-					<a href="http://www.ehow.com/how-does_4570805_color-affect-learning.html">here</a>).
+					<a href="//www.ehow.com/how-does_4570805_color-affect-learning.html">here</a>).
 				</p>
 				<p>
 					Also, the voting system uses the colors for its display. If you haven't already,
@@ -127,8 +127,6 @@
 					for all users.</li><br/>
 					<li>Underneath each chart is the decimal value corresponding to the value of the
 					overall "up" percentage,<br/> and the total number of votes on the post.</li>
-				</li>
-
 				</ul>
 			</div>
 		</div>
