--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
 		</div>
 		</div>
 		</div>
-		<script src="http://code.jquery.com/jquery.js"></script>
+		<script src="//code.jquery.com/jquery.js"></script>
 		<script src="{% static 'js/bootstrap.min.js' %}"></script>
 	{% endblock navbar %}
 
