Updated FAQ and funct_tests to pass

--- a/templates/FAQ.html
+++ b/templates/FAQ.html
@@ -11,7 +11,7 @@
 		<li><a href="#1">My overall user rating is incorrect</a></li>
 		<li><a href="#2">My post has disappeared</a></li>
 		<li><a href="#3">I can't log in</a></li>
-		<li><a href="#4">Can I donate to you?</a></li>
+		{#<li><a href="#4">Can I donate to you?</a></li>#}
 		<li><a href="#5">I'm locked out of my account</a></li>
 		<li><a href="#6">My question is not listed</a></li>
 	</ul>
@@ -74,6 +74,7 @@
 				</p>
 		</ol><br/>
 
+{% comment %}
 		<h4><a id="4">Can I donate to you?</a></h4>
 		<p>
 			Of course, but I would suggest against it. The purpose of this site is to stimulate discussion
@@ -81,6 +82,7 @@
 			education better in this country.
 		</p>
 		<p>If, for whatever reason, you still feel inclined to donate, you may do so by clicking here {# DONATE #}.</p><br/>
+{% endcomment %}
 		
 		<h4><a id="5">I'm locked out of my account</a></h4>
 		<p>
