--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -33,7 +33,7 @@
 			</tr>			
 			<tr>
 				<td><label for="id_new_password1">New password:</label></td>
-				<td>{{ form.new_password1 }}</td>
+				<td>{{ form.new_password1 }} &nbsp; Passwords must contain at least 8 characters.</td>
 			</tr>
 			<tr>
 				<td><label for="id_new_password2">Confirm password:</label></td>
