Updated search form in hopes of working

--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -13,11 +13,10 @@
 		}); 
         </script> 
 
-	<form method="get" action=".">
-		<table>
-		{{ form.as_table }}
-		</table>
-		<button class="btn btn-primary" type="submit">Search</button>
+	<form method="get" action="/search">
+		<input type="text" name="q" style="float:left" />
+		<button class="btn btn-primary" type="submit" style="float:left">Search</button><br/>
+	</form>
 
 	{% if query %}
 		<h3>Results</h3>
@@ -40,6 +39,5 @@
 	{% else %}
 		{# Show some example queries to run, maybe query syntax, something else? #}
 	{% endif %}
-	</form>
 	</div>
 {% endblock %}
