--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -15,7 +15,7 @@
 
 	<form method="get" action="/search">
 		<input type="text" name="q" style="float:left" />
-		<button class="btn btn-primary" type="submit" style="float:left">Search</button><br/>
+		<button class="btn btn-primary" type="submit" style="float:left">&nbsp;Search</button><br/>
 	</form>
 
 	{% if query %}
