More search crap

--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -13,7 +13,7 @@
 		}); 
         </script> 
 
-	<form method="get" action=".">
+	<form method="get" action="/search">
 		<table>
 		{{ form.as_table }}
 		</table>
