--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -20,6 +20,9 @@
 		<button class="btn btn-primary" type="submit">Search</button>
 
 	{% if query %}
+		{% if suggestion %}
+			<p>Did you mean: {{ suggestion }}?</p>
+		{% endif %}
 		<h3>Results</h3>
 
 		{% for result in page.object_list %}
