Added favicon, fix some small template errors

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -12,7 +12,7 @@
 }
 
 /* Templates used on: learn_more */
-.tab-content h3, .tab-content h2 {
+.tab-content h3, .tab-content h2, .tab-content h1 {
 	color:#000099;
 }
 
