--- a/templates/learn_more.html
+++ b/templates/learn_more.html
@@ -18,7 +18,7 @@
 		<div class="tab-content">
 			{# Default display upon arrival #}
 			<div class="tab-pane fade in active" id="tab0">
-				<h2>Welcome to	<img src="{% static 'img/logo.png' %}" height="100px" width="200px" style="display:inline-block" /></h2>
+				<h1 style="font-family:cursive">Welcome to YouTalkEdu</h1>
 				<h3 style="display:inline-blocK">Where YOU discuss & debate all things education!</h3><br/>
 				<p>If I'm already boring you, just go wander around the site. I won't be upset. Really.</p><br/>
 				<h4>What is YouTalkEdu?</h4>
@@ -60,7 +60,6 @@
 				<h4>What's with the colors?</h4>
 				<p>
 					Another great question! 
-					Pat yourself on the back for asking two great questions in a row. 
 					Color can be used to stimulate learning and is beneficial in bringing out creativity
 					(you can read more about this in the rather uncolorful eHow article located
 					<a href="//www.ehow.com/how-does_4570805_color-affect-learning.html">here</a>).
@@ -74,7 +73,8 @@
 
 			{# Tab 2 - PIQS pages #}
 			<div class="tab-pane fade in" id="tab2">
-				<h3>PIQS - A very unclever abbreviation.</h3><br/>
+				<h3>PIQS - A very unclever abbreviation for the content pages.</h3>
+				<h4 style="font-size:1.1em">PIQS is an abbreviation for the content pages on the site. It stands for:</h4><br/>
 
 				<h4>{{ page_type_dict.0.1 }} - Discuss any problems you see in the current educational system here</h4>
 				<p>No specifics!! Phrases such as "Mr. Doe should be fired" or 
@@ -104,7 +104,7 @@
 					<li>Clicking on the post title will bring you to that post's page,
 					on which the content of the post as well as the comments are displayed.</li><br/>
 					<li>To limit the spam of the website, you will only be able to post 5
-					times within a 24 hour period, so make your posts count!</li>
+					times within a 24 hour period. Make your posts count!</li>
 				</ul>
 			</div>
 
