--- a/templates/rapid_comment.html
+++ b/templates/rapid_comment.html
@@ -11,12 +11,8 @@
 	<div class="move_right">
 	<h4>To limit spam, users may not comment more than once within a {{time_frame}} second time window.</h4><br/>
 
-	<h4>Either:</h4>
-	<ol>
-		<li>Click "back" on your browser or</li> 
-		<li>Copy your comment below and click "Return"</li>
-	</ol>
+	<h4>Copy your comment below, then click "Return" or hit "Back" on your browser.</h4>
 	<p><span style="font-weight:bold">Your comment: </span> {{ content }}</p><br/>
-	<a href="?next={{redirect_to}}">Return</a> (Be sure to copy your text first)
+	<a style="font-size:1.2em" href="?next={{redirect_to}}">Return</a> (Be sure to copy your comment first)
 	</div>
 {% endblock content %}
