--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
 	<link rel="icon" type="image/png" href="{% static 'img/logo.png' %}">
 	{% block stylesheets %}
-	<meta id="Viewport" name="viewport" width="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	{# Good display for all devices #}
 	<script type="text/javascript">
 		function(){
@@ -45,9 +45,9 @@
             	        <ul class="nav pull-right">
 				{% if user.is_authenticated %}
 					<li><a href="{% url 'user_page' user=user %}">{{ user.username }}</a></li>
-					<li><a name="logout_nav" href="{% url 'auth_logout' %}?next={{request.path}}">Logout</a></li>
+					<li><a href="{% url 'auth_logout' %}?next={{request.path}}">Logout</a></li>
 				{% else %}
-					<li class="pull-right"><a name="login_nav" href="{% url 'login' %}?next={{request.path}}">Login</a></li>
+					<li class="pull-right"><a href="{% url 'login' %}?next={{request.path}}">Login</a></li>
 				{% endif %}
 			</ul>
 		</div>
