--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
 	<link rel="icon" type="image/png" href="{% static 'img/logo.png' %}">
 	{% block stylesheets %}
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" width="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 	{# Good display for all devices #}
 	<script type="text/javascript">
 		function(){
