--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
 <head>
 	<link rel="icon" type="image/png" href="{% static 'img/logo.png' %}">
 	{% block stylesheets %}
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" width="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 	{# Good display for all devices #}
 	<script type="text/javascript">
